--- a/DB_CP/AccessToDB/AccessToDB.csproj
+++ b/DB_CP/AccessToDB/AccessToDB.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="GetInfo.cs" />
     <Compile Include="Connector.cs" />
+    <Compile Include="InsertInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
