Add eatery and its menu UI

--- a/DB_CP/DB_CP/DB_CP.csproj
+++ b/DB_CP/DB_CP/DB_CP.csproj
@@ -81,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\DataStructures.Eatery.datasource" />
+    <None Include="Properties\DataSources\DataStructures.Meal.datasource" />
+    <None Include="Properties\DataSources\DataStructures.User.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
