--- a/DB_CP/DataStructures/DataStructures.csproj
+++ b/DB_CP/DataStructures/DataStructures.csproj
@@ -46,5 +46,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="DataStructures_ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
