--- a/DB_CP/DB_CP/DB_CP.csproj
+++ b/DB_CP/DB_CP/DB_CP.csproj
@@ -81,6 +81,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\DataStructures.Meal.datasource" />
+    <None Include="Properties\DataSources\DataStructures.User.datasource" />
     <None Include="UI_ClassDiagram.cd" />
     <None Include="Properties\DataSources\DataStructures.Eatery.datasource" />
     <None Include="Properties\Settings.settings">
