--- a/DB_CP/DataStructures/DataStructures.csproj
+++ b/DB_CP/DataStructures/DataStructures.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Eatery.cs" />
     <Compile Include="Meal.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
